<resources>
    <string name="app_name">iBook</string>

    <!--    Search Activity-->
    <string name="button_search">Search</string>
    <string name="search_title">Title of the book</string>
    <string name="search_author">Author</string>
    <string name="search_publisher">Publisher</string>
    <string name="search_description">Description</string>
    <string name="search_message">Search by whatever information you have</string>
<!--    Hints-->
    <string name="book_title_hint">Book title</string>
    <string name="price_hint">Price</string>
    <string name="author_hint">Author</string>
    <string name="publisher_hint">Publisher</string>
    <string name="description_hint">Description</string>

<!--    book item layout-->
    <string name="book_title">The book title is not available</string>
    <string name="price">The price is not available</string>
    <string name="author">The author information is not available</string>
    <string name="publisher">The publisher information is not available</string>
    <string name="description">The book description is not available</string>

<!--    -->

<!--    Response activity-->
    <string name="error">Umekwama mkuu</string>
</resources>