<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ImageViewBookCover"
        android:scaleType="centerCrop"
        android:src="@drawable/black_panther"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_title"
            android:textSize="30dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="@string/description"
            android:id="@+id/textViewBookDescription"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewBookPublisher"
            android:hint="@string/publisher"
            android:textSize="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/author"
                android:textSize="20sp" />
        </RelativeLayout>



    </LinearLayout>

</LinearLayout>